--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 /* Reset and Base Styles */
 * {
     margin: 0;
@@ -5,8 +6,9 @@
     box-sizing: border-box;
 }
 .logo img {
-    width: 120px;
+    width: 200px;
     margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 body {
@@ -118,7 +120,7 @@ body {
 .email-text {
     font-size: 1.1rem;
     color: #a1a1a6;
-    margin-bottom: 1.5rem;
+    margin-bottom: 0.2rem;
     font-weight: 400;
 }
 
